NLP TP/texts/robotics/robotics.stackexchange_0000031923.txt
Q:

Building ROS on Fedora 15

I am trying to build ROS on Fedora 15, and I get an error with rosmake:
Detected ros_comm bootstrapping it too.
  File "/home/user/ros/ros/bin/rosmake", line 46
    print "Rospack failed to build" 
                                  ^
SyntaxError: invalid syntax

When I looked into the issue, this is invalid syntax in 3.0 or higher, but I'm running 2.7. If I make my default python 3.2, then rosinstall doesn't even run:
Traceback (most recent call last):
  File "/usr/bin/rosinstall", line 4, in <module>
    import pkg_resources
ImportError: No module named pkg_resources

Is this a Fedora issue? Is this a python issue? How can I solve this?

Originally posted by Skinkworks on ROS Answers with karma: 11 on 2011-05-30
Post score: 0

Original comments
Comment by felix k on 2011-05-30:
At least, I suspect it not to be a general fedora issue, I built ROS on Fedora 12 with python 2.6.2 and never saw that. But I really want to upgrade, and now as 15 is released, I hope there is a solution.

A:

This is a python 2.6 vs 2.7 issue I'm pretty sure.  Patches to rosmake are trickling in.

Originally posted by Straszheim with karma: 426 on 2011-06-17
This answer was ACCEPTED on the original site
Post score: 2

